# novel-material

./: .env.example  .gitignore  .python-version  .tmp_event_audit.yaml  .tmp_event_audit_all.yaml  .tmp_event_audit_all_after_write.yaml  .tmp_refine_test.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  USER_MANUAL.md  docker-compose.yml  feature.md  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
backend/: main.py  requirements.txt
config/: database.yaml  embedding.yaml  llm.yaml  providers.yaml  settings.yaml
data/: character_index.yaml  deletion_log.yaml  index.yaml  plot_index.yaml  tags.yaml  tags_view.yaml
docs/: AGENTS.md  ARCHITECTURE.md  BACKEND.md  CLAUDE_CODE_SETTINGS.md  DEFECTS_AND_ROADMAP.md  DESIGN.md  FRONTEND.md  GENRE_AWARE_ANALYSIS.md  LOGGING.md  PLANS.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  REQUIREMENTS.md  RETREIVAL_IMPROVEMENT.md  SECURITY.md  TAG_GUIDE.md  USAGE-GUIDE.md  USER_MANUAL.md  WEB-UI-GUIDE.md  classify_implementation.md  code-review-llm-response-contract-report.md  code-review-report.md  feedback.md  pipeline-execution-reflection-20260424.md  pipeline-execution-review-20260423.md  pipeline-execution-review-三体3-20260423.md  schema-validation-issues-20260424.md  search-benchmark.md  skill-repair-plan.md
eval/: genre_profile_cases.yaml  search_candidates.yaml  search_queries.yaml
evals/: run.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: batch_scene_processor.py  batch_split_scenes.py  benchmark_search.py  (+16 more)
(+667 files in other folders)
