[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-material"
version = "3.0.0"
description = "Novel material management with LLM analysis"
requires-python = ">=3.10"
dependencies = [
    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "pgvector>=0.2.5",
    # YAML
    "pyyaml>=6.0.1",
    # LLM
    "openai>=1.10.0",
    "tiktoken>=0.5.2",
    # Embedding
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    # Utilities
    "tenacity>=8.2.3",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
nm = "novel_material.cli:main"
novel-material = "novel_material.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
